--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -3,3 +3,4 @@ main.title = Вітаємо на порталі OpenUk
 main.home = Головна
 main.user = Кабінет користувача
 main.about = Про нас
+main.message = Для вдосконалення своїх знань, будь ласка, оберіть категорію
