--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -4,3 +4,8 @@ main.home = Головна
 main.user = Кабінет користувача
 main.about = Про нас
 main.message = Для вдосконалення своїх знань, будь ласка, оберіть категорію
+
+
+
+#category
+category.button = Почати!
