moved to security 4.0.2

--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -9,3 +9,9 @@ main.message = Для вдосконалення своїх знань, будь
 
 #category
 category.button = Почати!
+
+#user
+user.username = Нік
+user.email = Електронна адреса
+user.status = Статус
+user.coins = Монетки
