--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -4,7 +4,9 @@ main.home = Головна
 main.user = Кабінет користувача
 main.about = Про нас
 main.message = Для вдосконалення своїх знань, будь ласка, оберіть категорію
-
+main.signin = Увійти
+main.signup = Зареєструватися
+main.logout = Вийти
 
 
 #category
