--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -1,9 +1,10 @@
 # main page
-main.title = Вітаємо на порталі OpenUk
+main.title = Вітаємо Вас на порталі!
 main.home = Головна
 main.user = Кабінет користувача
 main.about = Про нас
 main.message = Для вдосконалення своїх знань, будь ласка, оберіть категорію
+main.please.signup = Для вдосконалення своїх знань, будь ласка, зареєструйтеся
 main.signin = Увійти
 main.signup = Зареєструватися
 main.logout = Вийти
