template for admin plus others

--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -8,6 +8,7 @@ main.please.signup = Для вдосконалення своїх знань, б
 main.signin = Увійти
 main.signup = Зареєструватися
 main.logout = Вийти
+main.admin = Панель адміна
 
 
 #category
